--- a/ExamGenerator/templates/index.html
+++ b/ExamGenerator/templates/index.html
@@ -26,10 +26,8 @@
                 <h1>MAKE YOUR LIFE EASIER</h1>
             </div>
             <div>
-                <p>Transform study materials into adaptive quizzes or </p>
-                <p>generate exams instantly. Easygen makes it simple</p>
-                <p>for students and teachers alike.</p>
-                <button class="getstarted">Get Started</button>
+                <p>Transform study materials into adaptive quizzes or generate exams instantly. Easygen makes it simple for students and teachers alike.</p>
+                <a href="{{ url_for('views.upload') }}" class="getstarted">Get Started</a>
             </div>
         </div>
         <div class="info">
@@ -125,7 +123,7 @@
             <div class="jump">
                 <h2>Join Easygen and Simplify Your Learning or Teaching</h2>
                 <p>Sign up now to get started with creating quizzes, generating exams, and exploring all that Easygen has to offer.</p>
-                <a>
+                <a href="{{ url_for('views.upload') }}">
                     <span> GET STARTED </span>
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="3" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-arrow-up-right"><path d="M7 7h10v10"/><path d="M7 17 17 7"/></svg>    
                 </a>
