--- a/ExamGenerator/templates/dashboard.html
+++ b/ExamGenerator/templates/dashboard.html
@@ -10,7 +10,7 @@
     <nav class="navbar">
         <ul>
             <li class="logo-container"><a href="{{ url_for('views.index') }}">
-                    <img src="../static/images/logo1.svg" style="width: 100%;" class="logo">
+                    <img src="../static/images/logo.svg" style="width: 100%;" class="logo">
             </a></li>
             
             <div class="menu-link">
