--- a/ExamGenerator/templates/index.html
+++ b/ExamGenerator/templates/index.html
@@ -13,7 +13,7 @@
             <ul>
                 <li><a href="#welcome">Home</a></li>
                 <li><a href="#aboutus">About</a></li>
-                <li><a href="{{ url_for('views.dashboard') }}"> <b>Easygen</b></a></li>
+                <li><a href="{{ url_for('views.dashboard') }}"><img src="../static/images/logo.svg" alt="Easygen"></a></li>
                 <li><a href="#contactinfo">Contact us</a></li>
                 <li><a href="#">Register</a></li>
             </ul>
@@ -193,4 +193,4 @@
         });
     </script>
       
-      {% endblock %}
+{% endblock %}
