--- a/ExamGenerator/templates/preview.html
+++ b/ExamGenerator/templates/preview.html
@@ -10,7 +10,7 @@
 <img src="../static/images/main_bg.svg" class="bg-image">
 <div class="preview-container">
     <div class="title-section">
-        <a href=" {{ url_for('views.upload') }}"><i class="fa-solid fa-chevron-left"></i> Go back</a>
+        <a href="{{ url_for('views.upload') }}"><i class="fa-solid fa-chevron-left"></i> Go back</a>
         <h1>Select Page</h1>
     </div>
 
@@ -23,7 +23,9 @@
                         <p>{{ loop.index }}</p>
                     </div>
                 {% endfor %}
-                    <div id="end-of-thumbnails">end-of-thumbnails</div>
+                    <div id="end-of-thumbnails">
+                        <div class="preview-loader"></div>
+                    </div>
             {% else %}
                 <p>No thumbnails available.</p>
             {% endif %}
@@ -42,9 +44,9 @@
                     <label for="page-selection">Page Selection</label>
                     <div class="options-input">
                         <select name="page-selection" id="page-selection">
-                            <option value="all">All Pages</option>
-                            <option value="current">Current Page</option>
                             <option value="select">Select Pages</option>
+                            <option value="current">Current Page</option>
+                            <option value="all">All Pages</option>
                         </select>
                         <input type="text" name="pages" placeholder="Example: “1-2, 5”">
                     </div>
@@ -55,16 +57,24 @@
                         <button type="button" class="btn btn-primary" id="ques-btn">+</button>
                     </div>
                     <div class="options-input type">
-                        <div>
+                        <div class="add-type">
                             <label for="ques-type">Type of Question</label>
                             <select name="ques-type" id="ques-type">
                                 <option value="identification">Identification</option>
                                 <option value="multiple_choice">Multiple Choice</option>
                                 <option value="true_or_false">True or False</option>
                             </select>
+                            <!-- add question type input  -->
+                            <select name="ques-type" id="ques-type">
+                                <option value="identification">Identification</option>
+                                <option value="multiple_choice">Multiple Choice</option>
+                                <option value="true_or_false">True or False</option>
+                            </select>
                         </div>
-                        <div>
+                        <div class="add-quantity">
                             <label for="ques-num">Quantity</label>
+                            <input type="number" name="ques-num" id="ques-num" placeholder="1">
+                            <!-- add question quantity input  -->
                             <input type="number" name="ques-num" id="ques-num" placeholder="1">
                         </div>
                     </div>
