--- a/ExamGenerator/templates/quiz-complete.html
+++ b/ExamGenerator/templates/quiz-complete.html
@@ -24,7 +24,7 @@
     </div>
 
     <!-- Answers modal -->
-    {% include "review-ans.html" %}
+    {% include "includes/review-ans.html" %}
 </div>
 {% endblock %}
 
