--- a/ExamGenerator/static/css/style.css
+++ b/ExamGenerator/static/css/style.css
@@ -24,6 +24,46 @@ body {
     overflow-x: hidden;
 }
 
+/* NAVIGATION LINKS STYLES */
+header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 1000;
+    backdrop-filter: blur(5px);
+}
+
+.navbar {
+    margin: 2em;
+}
+
+nav {
+    padding: 0 4em;
+}
+
+nav ul {
+    list-style: none;
+    padding: 1em;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-bottom: 1px solid var(--black-color);
+}
+
+nav ul li a {
+    color: var(--black-color);
+    text-decoration: none;
+    font-size: 1.2rem;
+}
+
+nav ul li a.active {
+    font-weight: 700;
+}
+
+
+
+
 .title-section {
     margin: 2% 5%;
 }
