--- a/ExamGenerator/templates/dashboard1.html
+++ b/ExamGenerator/templates/dashboard1.html
@@ -1,4 +1,4 @@
-{% extends "/layout/game-base.html" %}
+{% extends "layout/base.html" %}
 
 {% block css_file %}
 <link rel="stylesheet" href="{{ url_for('static', filename='css/dashboard.css') }}">
