--- a/ExamGenerator/templates/accounts/signup.html
+++ b/ExamGenerator/templates/accounts/signup.html
@@ -23,30 +23,13 @@
     <!-- TEMPORARY BOOTSTRAP CSS -->
     <form method="POST" class="mt-5 pt-5">
         <h1 align="center">Sign Up</h1>
-        <div class="form-group">
-            <label for="email">Email Address</label>
-            <input type="email" class="form-control" id="email" name="email" placeholder="Enter email address">
-        </div>
-        <div>
-            <div class="form-group">
-                <label for="firstname">First Name</label>
-                <input type="text" class="form-control" id="firstname" name="firstname" placeholder="Enter first name">
-            </div>
-            <div class="form-group">
-                <label for="lastname">Last Name</label>
-                <input type="text" class="form-control" id="lastname" name="lastname" placeholder="Enter last name">
-            </div>
-        </div>
-        <div class="form-group">
-            <label for="password1">Password</label>
-            <input type="password" class="form-control" id="password1" name="password1" placeholder="Enter password">
-        </div>
-        <div class="form-group">
-            <label for="password2">Confirm Password</label>
-            <input type="password" class="form-control" id="password2" name="password2" placeholder="Confirm password">
-        </div>
-        <br>
-        <button type="submit" class="btn btn-primary">Submit</button>
+        {{ form.hidden_tag() }}
+        <p>{{ form.first_name.label }} {{ form.first_name() }}</p>
+        <p>{{ form.last_name.label }} {{ form.last_name() }}</p>
+        <p>{{ form.email.label }} {{ form.email() }}</p>
+        <p>{{ form.password.label }} {{ form.password() }}</p>
+        <p>{{ form.confirm_password.label }} {{ form.confirm_password() }}</p>
+        <p>{{ form.submit() }}</p>
         <br>
         <a href="{{ url_for('auth.login') }}">Have an account already? Login here</a>
     </form>
