--- a/ExamGenerator/templates/game/multiple-choice.html
+++ b/ExamGenerator/templates/game/multiple-choice.html
@@ -11,25 +11,25 @@
 {% block game_content %}      
 
     <div id="question">
-        <h2 id="questionText"></h2>
+        <p id="questionText"></p>
     </div>
     <div id="optionList">
-        <h3 id="questionText1"></h3>
+        <h4 id="questionText1"></h4>
         <div class="answerItem">
-            <h4 id="answerNo1">a</h4>
-            <h4 class="choice_que" id="option1"></h4>
+            <p id="answerNo1">a</p>
+            <p class="choice_que" id="option1"></p>
         </div>
         <div class="answerItem">
-            <h4 id="answerNo2">b</h4>
-            <h4 class="choice_que" id="option2"></h4>
+            <p id="answerNo2">b</p>
+            <p class="choice_que" id="option2"></p>
         </div>
         <div class="answerItem">
-            <h4 id="answerNo3">c</h4>
-            <h4 class="choice_que" id="option3"></h4>
+            <p id="answerNo3">c</p>
+            <p class="choice_que" id="option3"></p>
         </div>
         <div class="answerItem">
-            <h4 id="answerNo4">d</h4>
-            <h4 class="choice_que" id="option4"></h4>
+            <p id="answerNo4">d</p>
+            <p class="choice_que" id="option4"></p>
         </div>
     </div>
 
