--- a/ExamGenerator/templates/game/true-or-false.html
+++ b/ExamGenerator/templates/game/true-or-false.html
@@ -11,7 +11,7 @@
 {% block game_content %}
 
     <div id="question">
-        <h2 id="questionText"></h2>
+        <p id="questionText"></p>
     </div>
     <div id="optionList">
         <h3 id="questionText1"></h3>
