--- a/ExamGenerator/templates/preview.html
+++ b/ExamGenerator/templates/preview.html
@@ -69,7 +69,7 @@
                                 <option value="multiple_choice">Multiple Choice</option>
                                 <option value="true_or_false">True or False</option>
                             </select>
-                            <input type="number" name="ques-num" id="ques-num" placeholder="1">
+                            <input type="number" name="ques-num" id="ques-num" placeholder="1" required>
                         </div>
                     </div>
                 </div>
