--- a/ExamGenerator/static/css/identification.css
+++ b/ExamGenerator/static/css/identification.css
@@ -1,5 +1,5 @@
 body {
-    background-image: radial-gradient(circle, white 7%, var(--secondary-color), var(--secondary-color));
+    background-image: radial-gradient(circle, white 7%, var(--green-light), var(--green-light));
 }
 
 #quiz #answerList {
@@ -74,7 +74,7 @@ body {
 #userAnswer {
     width: 93%; 
     padding: 20px;
-    font-size: 18px;
+    font-size: 1em;
     border-radius: 10px;
     border: 2px solid var(--black-color);
     background-color: white;
