--- a/ExamGenerator/static/css/style.css
+++ b/ExamGenerator/static/css/style.css
@@ -8,7 +8,7 @@
     --black-color: #0D1717;
     --gray-color: #D9D9D9;
     --green-color: #4CAF50;;
-    --green-light: #ADFFE4;
+    --green-light: #BAE6E2;
     --red-color: #E72636;
     --red-light: #FFADC8;
 }
@@ -123,6 +123,7 @@ nav ul li a.active {
     top: 0;
     left: 0;
     z-index: -1;
+    height: 100vh;
 }
 
 
@@ -177,8 +178,8 @@ nav ul li a.active {
     margin-bottom: 15px;
 }
 
-#quiz #question h2 {
-    font-size: 24px;
+#quiz #question p {
+    font-size: 1.2em;
 }
 
 #quiz #optionList {
@@ -187,9 +188,15 @@ nav ul li a.active {
     flex-direction: column;
 }
 
+.quiz_buttons {
+    display: flex;
+    justify-content: flex-end;
+    gap: 2em;
+    padding-top: 3em;
+}
+
 .quiz_buttons button {
-    width: 300px;
-    margin: 2em 3em;
+    width: 200px;
 }
 
 
