--- a/ExamGenerator/templates/game/identification.html
+++ b/ExamGenerator/templates/game/identification.html
@@ -11,7 +11,7 @@
 {% block game_content %}
 
     <div id="question">
-        <h2 id="questionText"></h2>
+        <p id="questionText"></p>
         <img id="questionImage" src="" alt="" style="display: none;"/>
     </div>
     <div id="answerInput">
