--- a/ExamGenerator/templates/layout/game-base.html
+++ b/ExamGenerator/templates/layout/game-base.html
@@ -5,7 +5,7 @@
 {% block content %}
 <div id="container">
     <div id="quiz_header">
-        <h2>{% block game_header %} {% endblock %} Quiz</h2>
+        <h2>{% block game_header %} {% endblock %}</h2>
     </div>
     <div id="quiz">
         <div class="progressBarContainer">
@@ -21,8 +21,8 @@
             {% endblock %}
 
             <div class="quiz_buttons">
-                <button id="Submit" class="btn btn-primary" type="button">Submit</button>
                 <button id="Cancel" class="btn btn-secondary" type="button">Cancel</button>
+                <button id="Submit" class="btn btn-primary" type="button">Submit</button>
             </div>
         </div>
     </div>
