--- a/ExamGenerator/static/css/identification.css
+++ b/ExamGenerator/static/css/identification.css
@@ -1,93 +1,93 @@
 body {
     background-image: radial-gradient(circle, white 7%, var(--green-light), var(--green-light));
-}
-
-#quiz #answerList {
-    width: 100%;
     display: flex;
-    flex-direction: row;
+    justify-content: center;
     align-items: center;
-    padding: 0 20px;
+    min-height: 100vh;
+    margin: 0;
 }
 
-#answerList .choice_que {
-    margin: 0; 
-    padding: 0;
-    line-height: 50px;
-    width: 100%;
-    border-radius: 7px;
-    font-size: 20px;
-    background-color: white;
-    overflow: hidden;
-    border: 2px solid var(--black-color);
-    cursor: pointer;
-    display: flex;
-    align-items: center;
-    padding: 3px;
-    
-}
-
-#quiz #answersSection {
-    height: 60px;
-    width: 100%;
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    display: flex;
-    align-items: center;
-    flex-direction: row;
-    border-radius: 30px 0;
-}
-
-#quiz #answersSection h3 {
-    margin: 0px 30px;
-    display: none;
-}
-
-#quiz #userAnswer h3:last-child {
-    height: 40px;
-    width: 100px;
-    display: grid;
-    place-items: center;
-    background: rebeccapurple;
-    position: absolute;
-    right: 0;
-    color: white;
-    border: 1px solid #b0c4d8;
-    font-size: 18px;
-    border-radius: 20px 5px;
-    cursor: pointer;
-    margin: 0 20px;
-}
-
-#optionList h2 {
-    font-size: 20px;
-    text-align: left;
-    font-weight: 300;
-}
-
-#answerInput {
-    margin-top: 20px;
-    text-align: center; 
-}
-
-#userAnswer {
-    width: 93%; 
+#question-container {
+    width: 80%;
+    max-width: 900px;
+    margin: 20px auto;
     padding: 20px;
-    font-size: 1em;
     border-radius: 10px;
-    border: 2px solid var(--black-color);
-    background-color: white;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); 
-    outline: none; 
+    background-color: none;
 }
 
-#userAnswer.correct {
+#question-title {
+    font-size: 2em;
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+.question-set {
+    margin-bottom: 20px;
+}
+
+.question-set h2 {
+    font-size: 1.5em;
+    margin-bottom: 10px;
+    background-color: none;
+}
+
+.question-card {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 15px;
+    margin-bottom: 15px;
+    border-radius: 8px;
+    background-color: none;
+}
+
+.question-text {
+    width: 100%;
+    margin-left: 10px;
+    height: 50px;
+    background-color: #5B699C;
+    color: white;
+    font-size: 1.2em;
+    padding: 10px;
+    text-align: left;
+    border-radius: 7px;
+    margin-top: 10px;
+    border: 2px solid var(--black-color);
+}
+
+.user-answer {
+    width: 100%;
+    padding: 10px;
+    font-size: 1em;
+    border: 2px solid var(--black-color);
+    border-radius: 5px;
+    background-image: linear-gradient(to right, rgba(91, 105, 156, 0.2), rgba(239, 242, 254, 0.6));
+    margin-top: 10px;
+}
+
+p {
+    font-size: 1.5rem;
+}
+
+.user-answer.correct {
     border-color: var(--green-color);
 }
 
-#userAnswer.incorrect {
+.user-answer.incorrect {
     border-color: var(--red-color);
+}
+
+#no-questions-message {
+    font-size: 1.2em;
+    text-align: center;
+    color: #666;
+}
+
+.correct-answer {
+    font-size: 0.9em;
+    color: var(--green-color);
+    margin-top: 5px;
 }
 
 #feedback {
@@ -98,7 +98,7 @@ body {
     text-align: left;
 }
 
-.correct-message{
+.correct-message {
     color: var(--green-color);
 }
 
