--- a/ExamGenerator/templates/game/identification.html
+++ b/ExamGenerator/templates/game/identification.html
@@ -1,27 +1,36 @@
 {% extends "layout/game-base.html" %}
 
 {% block css_file %}
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/identification.css') }}">
+<link rel="stylesheet" href="{{ url_for('static', filename='css/identification.css') }}">
 {% endblock %}
 
-{% block game_title %} View Progress{{ game_mode }} {% endblock %} 
+{% block game_title %} View Progress {{ game_mode }} {% endblock %}
 
-{% block game_header %} {{ game_mode }} {% endblock %} 
+{% block game_header %} {{ game_mode }} {% endblock %}
 
 {% block game_content %}
+<div id="question-container">
+    <h1 id="question-title">Identification</h1>
 
-    <div id="question">
-        <p id="questionText"></p>
-        <img id="questionImage" src="" alt="" style="display: none;"/>
-    </div>
-    <div id="answerInput">
-        <input type="text" id="userAnswer" placeholder="Enter your answer here"/>
-    </div>
-    <div id="feedback"></div>
-
+    {% if generated_questions %}
+        {% for question_set in generated_questions %}
+            <div class="question-set">                
+                {% for question_data in question_set.questions %}
+                    <div class="question-card">
+                        <p class="question-text">{{ question_data.text }}</p>
+                        <p>Answer:</p>
+                        <input type="text" class="user-answer" placeholder="Enter your answer here"/>
+                        <span class="correct-answer" style="display: none;">{{ question_data.answer }}</span>
+                    </div>
+                {% endfor %}
+            </div>
+        {% endfor %}
+    {% else %}
+        <p id="no-questions-message">No questions generated.</p>
+    {% endif %}
+</div>
 {% endblock %}
 
-{% block js_file %} 
-    <script src="../../static/js/questions.js"></script>
-    <script src="../../static/js/identification.js"></script>
+{% block js_file %}
+<script src="{{ url_for('static', filename='js/identification.js') }}"></script>
 {% endblock %}
