fixed the route the mcq and tof aren't working for now

--- a/ExamGenerator/templates/game/multiple-choice.html
+++ b/ExamGenerator/templates/game/multiple-choice.html
@@ -1,42 +1,44 @@
-{% extends "/layout/game-base.html" %}
+{% extends "layout/game-base.html" %}
 
 {% block css_file %}
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/multiple-choice.css') }}">
+<link rel="stylesheet" href="{{ url_for('static', filename='css/multiplechoice.css') }}">
 {% endblock %}
 
-{% block game_title %} {{ game_mode }} {% endblock %} 
+{% block game_title %} View Progress {{ game_mode }} {% endblock %}
 
-{% block game_header %} {{ game_mode }} {% endblock %} 
+{% block game_header %} {{ game_mode }} {% endblock %}
 
-{% block game_content %}      
+{% block game_content %}
+<div id="question-container">
+    <h1 id="question-title">Multiple Choice</h1>
 
-    <div id="question">
-        <p id="questionText"></p>
-    </div>
-    <div id="optionList">
-        <h4 id="questionText1"></h4>
-        <div class="answerItem">
-            <p id="answerNo1">a</p>
-            <p class="choice_que" id="option1"></p>
-        </div>
-        <div class="answerItem">
-            <p id="answerNo2">b</p>
-            <p class="choice_que" id="option2"></p>
-        </div>
-        <div class="answerItem">
-            <p id="answerNo3">c</p>
-            <p class="choice_que" id="option3"></p>
-        </div>
-        <div class="answerItem">
-            <p id="answerNo4">d</p>
-            <p class="choice_que" id="option4"></p>
-        </div>
-    </div>
+    {% if generated_questions %}
+        {% for question_set in generated_questions %}
+            <div class="question-set">                
+                {% for question_data in question_set.questions %}
+                    <div class="question-card">
+                        <p class="question-text">{{ question_data.text }}</p>
+                        
+                        <div class="options-container">
+                            {% for option in question_data.options %}
+                                <div class="option">
+                                    <input type="radio" name="question_{{ loop.index0 }}" value="{{ option }}" class="user-answer">
+                                    <label>{{ option }}</label>
+                                </div>
+                            {% endfor %}
+                        </div>
 
+                        <span class="correct-answer" style="display: none;">{{ question_data.answer }}</span>
+                    </div>
+                {% endfor %}
+            </div>
+        {% endfor %}
+    {% else %}
+        <p id="no-questions-message">No questions generated.</p>
+    {% endif %}
+</div>
 {% endblock %}
 
-{% block js_file %} 
-    <script src="../../static/js/questions.js"></script>
-    <script src="../../static/js/multiple-choice.js"></script>
+{% block js_file %}
+<script src="{{ url_for('static', filename='js/multiplechoice.js') }}"></script>
 {% endblock %}
- 
