--- a/ExamGenerator/templates/download.html
+++ b/ExamGenerator/templates/download.html
@@ -11,13 +11,10 @@
         </div>
         
         <div class="download-buttons">
-<<<<<<< HEAD
+            <!-- Review & Download Button -->
             <a class="btn btn-secondary" href="{{ url_for('views.review_questions', ques_type=ques_type) }}">Review & Download</a>
+            <!-- Start Exam Button -->
             <a class="btn btn-primary" href="{{ url_for('game.' + ques_type) }}">Start Exam</a>            
-=======
-            <a class="btn btn-secondary" href="{{ url_for('views.review_questions') }}">Review & Download</a>
-            <a class="btn btn-primary" href="{{ url_for('game.identification') }}">Start Exam</a>
->>>>>>> d0f17155ddf965f8475d171c260abc5b3bced073
         </div>
     </div>
 </div>
